# crossfit_programming

./: .gitignore  LICENSE  README.md  backup_names.py  pushjerk_scraper.py  pyproject.toml  reprocess_data.py  ui.py
